--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Sagas</string>
+    <string name="app_name">SagasApp</string>
 
     <string name="activity_menu">Menú</string>
     <string name="title_iniciar_descarga">Iniciar descarga</string>
@@ -48,8 +48,15 @@
     <string name="fecha">Fecha</string>
     <string name="fecha_embarque">Fecha de embarque</string>
     <string name="seleccionar_fecha">Seleccione fecha...</string>
-    
-    
+    <string name="cantidad">Cantidad</string>
+    <string name="abr_unidad_medida">UM</string>
+    <string name="precio">Precio</string>
+    <string name="importe">Importe</string>
+    <string name="subtotal">Subtotal</string>
+    <string name="iva">IVA</string>
+    <string name="total">Total</string>
+    <string name="porcentaje_desc">% Descuento</string>
+
     <string name="empty_field">Hay campos vacios</string>
 
     <string name="registrar">Registrar</string>
