CVG - 09/08/2018 Integración web API Login
Integración web api para obtener lista de empresas y hacer login

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -65,6 +65,8 @@
     <string name="message_cancel">Cancelar</string>
     <string name="message_acept">Aceptar</string>
     <string name="invalid_email">El correo electronico no es valido</string>
+    <string name="usuario_incorrecto">El usuario y la contraseña no coinciden</string>
+    <string name="login_sucess">Usuario correcto</string>
     <string name="message_continuar">Una vez iniciado el proceso no es posible regresar, ¿esta seguro de continuar?</string>
 
     <string name="punto">.</string>
