CVG - 15/08/2018 Integración Web Api Lista Medidores y Almacenes

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -55,6 +55,7 @@
     <string name="label_no">No</string>
     <string name="tipo_medidor_tractor">Tipo de medidor del tractor</string>
     <string name="tipo_medidor_almacen">Tipo de medidor del almacen</string>
+    <string name="nombre_almacen">Numero de almacen</string>
     <string name="fecha">Fecha</string>
     <string name="fecha_embarque">Fecha de embarque</string>
     <string name="seleccionar_fecha">Seleccione fecha...</string>
