JOTM-23-08-2018-Registro de papeleta-Magnatel
Registro de papeleta con tipo de medidor Magnatel
Verificación de servicio disponible en tres intentos
Verificación de respuesta de registro api tres intentos
Registro en local si no responde los tres intentos

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -102,4 +102,8 @@
     </string-array>
     <string name="message_goback_diabled">En caso de que hayas llenado datos estos se perderán, ¿Realmente deseas continuar?</string>
     <string name="title_alert_message">Advertencia</string>
+    <string name="titulo_exito_registro_papeleta">Operación Exitosa</string>
+    <string name="mensaje_exito_papeleta_registro_en_servicio">Los datos se han guardado exitosamente</string>
+    <string name="titulo_exito_registro_papeleta_android">Datos guardados en Android</string>
+    <string name="mensaje_exito_papeleta_android">No he logrado conectar con el servidor por falta de conexión a internet. Los datos se enviarán al detectar una conexion al internet.</string>
 </resources>
