--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -120,4 +120,7 @@
     <string name="tomar_foto">Tomar foto</string>
     <string name="tomar_foto_estacion">Tomar foto de P5000 </string>
     <string name="registra_porcentaje_estacion">Registra el porcentaje del </string>
+    <string name="selecciona_la_pipa">Selecciona la pipa</string>
+    <string name="Pipa">Pipa</string>
+    <string name="registra_la_lectura_del_p500_de_la_pipa">Registra la lectura del P500 de la pipa</string>
 </resources>
