JOTM-06/09/2018 Agrega registro de inicial y final de camionetas
Agrega vista para el registro inicial y final de camionetas
Agrega modelos DTO necesario para camionetas
Agrega creación de tabla en local para inicio y fin de camionetas
Crea método para envió a api
Crea método para registrar en base de datos local
Queda pendiente conectar el método de registro en local con el de llamada de api rest

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -130,4 +130,9 @@
     <string name="Recordatorio_dos">Recuerda que las siguiente pantalla debes contabilizar <u>todos</u> los cilindros <b>llenos.</b></string>
     <string name="Selecciona_la_camioneta">Selecciona la camioneta:</string>
     <string name="Quien_eres">¿Quién toma la lectura? es decir, ¿quién eres?</string>
+    <string name="configuracion_camioneta"><u>Configuracion-camioneta</u></string>
+    <string name="cilindros">Cilindros</string>
+    <string name="cantidad_cilindros">Cantidad</string>
+    <string name="Registra_configuracion">Registra la configuración de salida de la camioneta</string>
+    <string name="Contabiliza">Contabiliza los llenos</string>
 </resources>
