JOTM - 12/09/2018 Guarda cambios Recarga
Guarda pantalla de recarga camioneta
Crea clase utilería de impresión

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -143,4 +143,6 @@
     <string name="Generar_reporte">Generar Reporte</string>
     <string name="terminar">Terminar</string>
     <string name="imprimir_reporte">Imprimir Reporte</string>
+    <string name="Recarga_camioneta">Recarga camioneta</string>
+    <string name="Recarga_de_gas">Recarga de gas</string>
 </resources>
