JOTM-13/09/2018 Registro en local y envio Recarga camioneta
* Registro en local de recarga de camionetas
* Registro en webservice de recarga de camioneta
* Agregar llamado rest para obtener catálogos de almacenes
* Falta modificar RespuestaDTO en dispositivo para guardar lo catálogos
* Falta modificar listener para extraer lecturas de cilindros

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -145,4 +145,6 @@
     <string name="imprimir_reporte">Imprimir Reporte</string>
     <string name="Recarga_camioneta">Recarga camioneta</string>
     <string name="Recarga_de_gas">Recarga de gas</string>
+    <string name="recarga">Recarga</string>
+    <string name="registra_configuracion_recarga">Registra la configuración de recarga de la camioneta</string>
 </resources>
