JOTM - 17/09/2018 Inicio vista de recarga de estación
* Inicia vista para recarga de estación

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -147,4 +147,5 @@
     <string name="Recarga_de_gas">Recarga de gas</string>
     <string name="recarga">Recarga</string>
     <string name="registra_configuracion_recarga">Registra la configuración de recarga de la camioneta</string>
+    <string name="Recarga_de_estacion">Recarga estación</string>
 </resources>
