JOTM 21/09/2018 Agrega ventana de autoconsumo pipas
* Agrega vistas para registro de  autoconsumo pipa
* Crea metodo para hacer el llamado al servicio
* Queda pendiente el guardado en local y agregar lisener

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -163,5 +163,6 @@
     <string name="Autoconsumo_inventario">Autoconsumo Inventario Gral</string>
     <string name="autoconsumo_inventario_gral">Autoconsumo Inventario Gral</string>
     <string name="la_salida_es_desde_el_inventario_general">La salida es desde el inventario general</string>
+    <string name="Autoconsumo">Autoconsumo</string>
     <!--<string name="selecciona_la_unidad_de_entrada">Selecciona la unidad de entrada:</string>-->
 </resources>
