JOTM 21/09/2018 Inicia pantalla traspaso
* Inicia pantalla traspaso

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -164,5 +164,9 @@
     <string name="autoconsumo_inventario_gral">Autoconsumo Inventario Gral</string>
     <string name="la_salida_es_desde_el_inventario_general">La salida es desde el inventario general</string>
     <string name="Autoconsumo">Autoconsumo</string>
+    <string name="Traspaso">Traspaso</string>
+    <string name="trasferencia_de_gas">Trasferencia de gas</string>
+    <string name="selecciona_la_estacion_de_carburacion_de_salida">Selecciona la Estación de Carburación de salida:</string>
+    <string name="selecciona_la_pipa_de_entrada">Selecciona la pipa de entrada:</string>
     <!--<string name="selecciona_la_unidad_de_entrada">Selecciona la unidad de entrada:</string>-->
 </resources>
