JOTM-25/09/2018 Calibración pipa inicial
* Crea ventana de calibración de pipa inicial
* Genera el método de registro de calibración de pipa inicial
* Genera el método de consulta de catálogos de pipa inicial

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -170,5 +170,7 @@
     <string name="selecciona_la_pipa_de_entrada">Selecciona la pipa de entrada:</string>
     <string name="Calibracion">Calibración</string>
     <string name="seleccione_la_estacion_de_carburacion_a_calibrar">Seleccione la estación de carburación a calibrar</string>
+    <string name="selecciona_la_pipa_de_salida_calibracion">Selecciona la Pipa de salida:</string>
+    <string name="selecciona_destino_de_las_pruebas">Selecciona destino de las pruebas:</string>
     <!--<string name="selecciona_la_unidad_de_entrada">Selecciona la unidad de entrada:</string>-->
 </resources>
