--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -176,5 +176,15 @@
     <string name="porcentaje_de_calibracion">Porcentaje de Calibración</string>
     <string name="registra_el_porcentaje_de_calibracion_configurado">Registra el porcentaje de calibracion configurado</string>
     <string name="confirmacion_configuracion"><![CDATA[El porcentaje configurado no coicide con la configuración predeterminada de la empresa <n>¿Desea continuar con esta configuración?<n>]]></string>
+    <string name="Anticipo">Anticipo</string>
+    <string name="selecciona_la_estacion_de_carburacion">Selecciona la Estación de Carburación</string>
+    <string name="regresar">Regresar</string>
+    <string name="hacer_anticipo">Hacer anticipo</string>
+    <string name="anticipar">Anticipar</string>
     <!--<string name="selecciona_la_unidad_de_entrada">Selecciona la unidad de entrada:</string>-->
+    <string-array name="header_tabla_anticipo">
+        <item># Tiket</item>
+        <item>Fecha</item>
+        <item>Monto</item>
+    </string-array>
 </resources>
