JOTM-27/09/2018-Ventana de corte de caja
* Pasos para corte de caja
* Queda pendiente métodos rest y actualizar texto de reporte

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -181,6 +181,14 @@
     <string name="regresar">Regresar</string>
     <string name="hacer_anticipo">Hacer anticipo</string>
     <string name="anticipar">Anticipar</string>
+    <string name="corte_de_caja">Corte de caja</string>
+    <string name="hacer_corte">Hacer Corte</string>
+    <string name="p5000">P5000</string>
+    <string name="Final">Final:</string>
+    <string name="anticipos">Anticipos:</string>
+    <string name="inicial">Inicial:</string>
+    <string name="monto_corte">Monto corte:</string>
+    <string name="litros">Litros:</string>
     <!--<string name="selecciona_la_unidad_de_entrada">Selecciona la unidad de entrada:</string>-->
     <string-array name="header_tabla_anticipo">
         <item># Tiket</item>
