JOTM-01/10/2018-Vista de lista de clientes
* Crea método para registro cliente
* Crea método para mostrar resultados buscador 
* Crea vista de buscador
* Crea adapter para buscador

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -205,6 +205,11 @@
     <string name="apellido_2">Apellido 2</string>
     <string name="celular">Celular</string>
     <string name="telef_no_fijo">Telefóno fijo</string>
+    <string name="razon_social">Razón Social</string>
+    <string name="cel">CEL</string>
+    <string name="nom">NOM</string>
+    <string name="rfc">RFC</string>
+    <string name="factura">FACTURA</string>
     <!--<string name="selecciona_la_unidad_de_entrada">Selecciona la unidad de entrada:</string>-->
     <string-array name="header_tabla_anticipo">
         <item># Tiket</item>
