--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -224,6 +224,11 @@
     <string name="credito">Crédito:</string>
     <string name="efectivo">Efectivo($):</string>
     <string name="confirmar">Confirmar</string>
+    <string name="No_venta">No hay datos en la venta.</string>
+    <string name="categoria">Categoria</string>
+    <string name="linea">Linea</string>
+    <string name="concepto">Concepto</string>
+    <string name="precio">Precio</string>
     <!--<string name="selecciona_la_unidad_de_entrada">Selecciona la unidad de entrada:</string>-->
     <string-array name="header_tabla_anticipo">
         <item># Tiket</item>
