JOTM-05/10/2018-Pantallas para venta de estación y pipas
* Fragmento de formulario de venta de estación y pipa
* Agregar menú de venta pipa y estación

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -228,6 +228,9 @@
     <string name="categoria">Categoria</string>
     <string name="linea">Linea</string>
     <string name="concepto">Concepto</string>
+    <string name="precio_lt">Precio (lt):</string>
+    <string name="desc_lt">Desc (lt)</string>
+    <string name="litros_despachados">Litros despachados</string>
     <!--<string name="selecciona_la_unidad_de_entrada">Selecciona la unidad de entrada:</string>-->
     <string-array name="header_tabla_anticipo">
         <item># Tiket</item>
