JOTM-12/10/2018-Mobile- interfaz y catalogo tipo de persona
* Ajusta responsive  de tablet a teléfono
* Agrega consumo de servicio tipo de persona en ventas

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -231,6 +231,8 @@
     <string name="precio_lt">Precio (lt):</string>
     <string name="desc_lt">Desc (lt)</string>
     <string name="litros_despachados">Litros despachados</string>
+    <string name="cliente_no_encontrado">Cliente no encontrado</string>
+    <string name="registrar_al_cliente">¿Registrar al cliente?</string>
     <!--<string name="selecciona_la_unidad_de_entrada">Selecciona la unidad de entrada:</string>-->
     <string-array name="header_tabla_anticipo">
         <item># Tiket</item>
