JOTM-19/10/2018-Mobile-Cambiar a un diseño unico buttons
*Coloca diseño estandar para todos los botones

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -233,6 +233,9 @@
     <string name="litros_despachados">Litros despachados</string>
     <string name="cliente_no_encontrado">Cliente no encontrado</string>
     <string name="registrar_al_cliente">¿Registrar al cliente?</string>
+    <string name="selecciona_el_almacen">Selecciona el almacen</string>
+    <string name="tomar_foto">Tomar foto</string>
+    <string name="selecciona_el_tipo_de_medidor_de_la_pipa">Selecciona el tipo de medidor de la pipa:</string>
     <!--<string name="selecciona_la_unidad_de_entrada">Selecciona la unidad de entrada:</string>-->
     <string-array name="header_tabla_anticipo">
         <item># Tiket</item>
