--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -235,6 +235,7 @@
     <string name="registrar_al_cliente">¿Registrar al cliente?</string>
     <string name="selecciona_el_almacen">Selecciona el almacen</string>
     <string name="selecciona_el_tipo_de_medidor_de_la_pipa">Selecciona el tipo de medidor de la pipa:</string>
+    <string name="error_conexion_lista_login">obtener las empresas por favor intente abriendo nuevamente la apliación</string>
     <!--<string name="selecciona_la_unidad_de_entrada">Selecciona la unidad de entrada:</string>-->
     <string-array name="header_tabla_anticipo">
         <item># Tiket</item>
