JOTM-20/11/2018-Registros de ventas
* Agrega cantidades de pago litros gas
* Agrega registro de venta de gas pipa y estación
* Modifica fuente de input razon social en celular normal
* Modifica fecha de registro app
* Modifica redirecciónamiento del tiket para estación y pipa.
* Agrega uppercase para la clave de la venta

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -23,8 +23,8 @@
     <string name="porcentaje_medidor">¿Porcentaje del medidor?</string>
     <string name="porcentaje_medidor_tractor_message">Registra el porcentaje del medidor del tractor</string>
     <string name="porcentaje_medidor_almacen_message">Registra el porcentaje del medidor del almacen</string>
-    <string name="message_imagen_nitida">¿La imagen esta nitida?</string>
-    <string name="message_nitida_si">Si,esta nitida/bien tomada</string>
+    <string name="message_imagen_nitida">¿La imagen esta nítida?</string>
+    <string name="message_nitida_si">Si,esta nítida/bien tomada</string>
     <string name="message_nitida_no">No, esta borrosa/mal tomada</string>
     <string name="cargando_imagenes_inicio">Espere un momento...</string>
     <string name="cargando_imagenes_fin">Proceso finalizado</string>
