JOTM-29/11/2018-Cambios ventas
Cambios de ventas

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -239,6 +239,7 @@
     <string name="calibracion_cilindros">Calibración cilindros</string>
     <string name="calibraci_n_cilindro">Calibración-Cilindro</string>
     <string name="registra_el_porcentajede_calibraci_n_configurada">Registra el porcentajede calibración configurada</string>
+    <string name="total_en_efectivo">Total en efectivo</string>
     <!--<string name="selecciona_la_unidad_de_entrada">Selecciona la unidad de entrada:</string>-->
     <string-array name="header_tabla_anticipo">
         <item># Tiket</item>
