JOTM-12/12/2018-Cambio de corte
Quinta candado no requerido en cortes

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">SagasApp</string>
 
     <string name="activity_menu">Menú</string>
@@ -254,9 +254,10 @@
     <string-array name="Regimen_fiscal">
         <item>Sin obligaciones fiscales</item>
     </string-array>
+    <string name="Recibe">Recibirá </string>
     <string-array name="condepto_venta">
         <item>Concepto</item>
-        <item>Cant.</item>
+        <item tools:ignore="Typos">Cant.</item>
         <item>P.Uni</item>
         <item>Desc</item>
         <item>Subt.</item>
